# ai-pneumonia

./: .gitignore  README.md  config.json  pyproject.toml
docs/: snapshot.py
src/: heatmap.py  test.py  train.py  validation.py  validation_prediction.csv  validation_prediction_epoch_10.csv  validation_prediction_epoch_30.csv
src/model/: augmentation.py  classification.py  encoder.py  standardization.py
src/model/utils/: dataloader.py  load_config.py  loss.py  scheduler.py
src/weights/: classifier_head_epoch_10.pth
